--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
-  background-color:black;
 }
 
-
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
 
 .App-header {
   background-color: #282c34;
