--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -1,69 +1,64 @@
-.App {
-  text-align: center;
-}
-
 .logo {
   pointer-events: none;
-  width:20px;
-  height:20px;
+  width:40px;
+  height:40px;
 }
 
-.App-header {
-  background-color: #282c34;
-  height: 5px;
+.header {
+  background-color: #f1f1f1;
+  text-align: center;
+  height: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 8px;
+  font-size: 25px;
   color: white;
+  padding: 75px;
+  margin: 0;
 }
 
 .title {
     color: #36C5D3;
-    font-family: Impact;
-
+    font-family: 'Alex Brush';
 }
 
-.genres2 {
+
+.bar {
     display : flex ;
-    width : 500px;
-    height : 30px;
-    background-color : black;
+    width : 1325px;
+    height : 100px;
+    background-color : #36C5D3;
     align-items : center;
     justify-content : space-around ;
-    border: 3px;
-
-    }
-
+    border: 10px;
+}
 
 .beau {
-
   justify-content : center ;
   display: flex;
   flex-direction : row;
   }
+
 .Genre {
-  background-color: black;
-  height: 10px;
+  background-color: #36C5D3;
+  height: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 8px;
+  font-size: 17px;
+  color: black;
+  font-family: Calibri;
+}
+
+.Search {
+  height: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
   color: #C0C9D4;
-  font-family: Impact;
+  font-family: Calibri;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
